# jwtservice

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION_GUIDE.md  Makefile  Makefile.windows  README.md  ROADMAP.md  context7.json  pyproject.toml  revocations.db
examples/: audience_validation.py  basic_usage.py  rate_limit_usage.py  revocation_usage.py
src/jwtservice/: __init__.py  core.py  revocation.py
tests/: conftest.py
tests/unit/: test_core.py  test_revocation.py
